Fix Fabric launch (merge version JSON), legacy versions, and skin features
- Launch: fabric profiles are partial piston JSONs (no javaVersion /
  downloads / assetIndex) — merge them with the vanilla JSON instead of
  parsing standalone; this was the 'missing field javaVersion' failure
- Launch: pre-1.13 versions expand minecraftArguments + legacy JVM args;
  javaVersion-less JSONs fall back to jre-legacy (Java 8) and fatal-on-
  Java-8 flags (ZGC) are stripped per resolved major
- Profile: keep skins[]/capes[] from GET /minecraft/profile; persist the
  active skin in the session; serve it as a cached data URL for the Home
  avatar (no webview CORS dependency)
- Skins: upload now POSTs multipart to /minecraft/profile/skins (Prism
  Launcher-verified; PUT was the retired 2013 API); wire the dead APPLY
  SKIN button with a classic/slim toggle; add DELETE /skins/active reset
- 37 core tests (fabric merge, legacy 1.8.9 command line, flag stripping)